# esp_ng

./: .gitignore  CMakeLists.txt  README.md  commit_msg.txt  partitions.csv  sdkconfig.defaults
components/app_startup/: CMakeLists.txt  app_startup.c
components/app_startup/include/: app_startup.h
components/config_mgr/: CMakeLists.txt  config_mgr.c
components/config_mgr/include/: config_mgr.h
components/config_store/: CMakeLists.txt  config_store.c
components/config_store/include/: config_store.h
components/config_store/test/: CMakeLists.txt  test_config_store.c
components/diag/: CMakeLists.txt  diag.c
components/diag/include/: diag.h
components/event_bus/: CMakeLists.txt  event_bus.c
components/event_bus/include/: event_bus.h
components/http_ui/: CMakeLists.txt  http_ui.c
components/http_ui/include/: http_ui.h  xtragen_logo_data.h
components/net_mgr/: CMakeLists.txt  net_mgr.c
components/net_mgr/include/: net_mgr.h
components/ota_mgr/: CMakeLists.txt  ota_mgr.c
components/ota_mgr/include/: ota_mgr.h
components/provisioning_mgr/: CMakeLists.txt  provisioning_mgr.c
components/provisioning_mgr/include/: provisioning_mgr.h
components/sntp_client/: CMakeLists.txt  sntp_client.c
components/sntp_client/include/: sntp_client.h
components/test_harness/: CMakeLists.txt  test_harness.c
components/udp_broadcast/: CMakeLists.txt  udp_broadcast.c
components/version/: CMakeLists.txt  version.c
components/wdt_mgr/: CMakeLists.txt  wdt_mgr.c
docs/: PENDING_ISSUES.md  UNITY_TESTS.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+4 files in other folders)
